Min height to fix wrapping of products in category template

--- a/shop/static/css/style.css
+++ b/shop/static/css/style.css
@@ -373,6 +373,7 @@ label {
     font-size: 16px;
     margin-bottom: 50px;
     margin-top: 20px;
+    min-height: 250px;
 }
 
 .product-thumb .product-name {
